Fixes to get the installer setup working again